--- a/Offers/templates/registration/register.html
+++ b/Offers/templates/registration/register.html
@@ -10,6 +10,22 @@
         </video>
         <div class="video-overlay header-text">
             <div class="caption">
+
+                <!-- reCAPTCHA API -->
+                      <script src='https://www.google.com/recaptcha/api.js?render={{6LczTeEfAAAAANM3rsBQ63TRXKhcJwHOT0skIhhY}}'></script>
+                      <title>Django - Google reCAPTCHA v3</title>
+
+                      <script>
+                          //global grecaptcha
+                          grecaptcha.ready(function() {
+                              grecaptcha.execute('{{6LczTeEfAAAAANM3rsBQ63TRXKhcJwHOT0skIhhY}}', {action: "/register/"}).then(function(token) {
+                                  document.getElementById('g-recaptcha-response').value = token;
+                              });
+                          });
+                      </script>
+
+
+
                   <form id="user_register" method="post" action="{% url 'register' %}">
                       {% csrf_token %}
 
@@ -28,9 +44,16 @@
                         <p>&nbsp;</p>
                       <p>{{form.password2.label}}
                       {{form.password2}}</p>
-                        <p>&nbsp;</p>
-                      <p><input type="submit"  value="Register"></p>
+                        <p></p>
+                      {{form.captcha}}
+
+                      <p><input type="submit" id="g-recaptcha-response" name="g-recaptcha-response" value="Register"></p>
                       <input type="hidden" name="next" value="{{ next }}">
+
+                      <!-- reCAPTCHA input
+                      <input type="hidden" id="g-recaptcha-response" name="g-recaptcha-response">
+                      <button type="submit">Submit</button>
+                      -->
                   </form>
                 </div>
             </div>
